--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .venv/
 .idea/
+pdfworks_web/db.sqlite3
+pdfworks_web/migrations
 pdfworks_web/pdfworks_web/local_settings.py
 pdfworks_web/static
 __pycache__
