remove migrations from repo

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ __pycache__
 .venv/
 .idea/
 pdfworks_web/db.sqlite3
-pdfworks_web/migrations
+pdfworks_web/website/migrations
 pdfworks_web/static
 pdfworks_web/pdfworks_web/local_settings.py
