--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ Django==2.1.7
 django-admin-tools==0.8.1
 django-common-helpers==0.9.2
 django-crontab==0.7.1
+gunicorn==20.0.4
 img2pdf==0.3.3
 Pillow==5.4.1
 PyPDF2==1.26.0
 pytz==2018.9
-gunicorn==20.0.4
+whitenoise==5.0.1
